--- a/research.ipynb
+++ b/research.ipynb
@@ -27,7 +27,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Data preparing"
+    "# 1. Models description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Elementary Recommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The most simlest way to predict ratings could be just a predicting average rating of all items, but this is not good at all. So for a baseline we can consider users and items bias. For example, some users rate the movies only in range 1-4 out of 10: rating 5 for them is something phenomenal; or users can also rate movies only highly.\n",
+    "\n",
+    "Let $\\mu$ be the average rating of all items, $r_{ui}$ - rating of item $i$ by user $u$, $I_u$ - items that were rated by user $u$. Then we can calculate user bias $b_u$ as:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "b_u=&\\frac{1}{|I_u|+\\alpha}\\sum_{i\\in{}I_u}(r_{ui} - \\mu)\n",
+    "\\end{align*}, \n",
+    "$$\n",
+    "\n",
+    "where $\\alpha$ is smoothing coefficient.\n",
+    "\n",
+    "We can similarly define item bias, but now let's take into account calculated users biases. Let $U_i$ be the users that rated item $i$. So then item bias $b_i$ is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "b_i=&\\frac{1}{|U_i|+\\alpha}\\sum_{u\\in{}U_i}(r_{ui} - b_u - \\mu)\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "**Final prediction will be:**\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "r_{ui}=&\\mu+b_u+b_i\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Similarity based"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Data preparing"
    ]
   },
   {
@@ -246,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It would be rather well to use [sparse matrix](https://en.wikipedia.org/wiki/Sparse_matrix) for storing all ratings, but in this case let's use dense one for simplifying."
+    "It would be rather well to use [sparse matrix](https://en.wikipedia.org/wiki/Sparse_matrix) for storing all ratings, but in this case let's use dense one for simplifying some actions."
    ]
   },
   {
@@ -288,6 +354,13 @@
    ],
    "source": [
     "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Quantifying the quality of recommendations."
    ]
   },
   {
