--- a/research.ipynb
+++ b/research.ipynb
@@ -16,6 +16,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from metrics import euclidean_similarity, pearson_similarity\n",
+    "import numpy.ma as ma\n",
+    "\n",
     "import scipy.sparse as scp\n",
     "\n",
     "from metrics import mapk\n",
@@ -41,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Elementary Recommendation"
+    "### **Elementary Recommendation**"
    ]
   },
   {
@@ -74,7 +78,9 @@
     "\\begin{align*}\n",
     "r_{ui}=&\\mu+b_u+b_i\n",
     "\\end{align*}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "> ##### See implementation of this approach in **elementary.py** file."
    ]
   },
   {
