added metrics description

--- a/research.ipynb
+++ b/research.ipynb
@@ -45,13 +45,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Elementary Recommendation**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### **Elementary Recommendation**\n",
+    "\n",
     "The most simlest way to predict ratings could be just a predicting average rating of all items, but this is not good at all. So for a baseline we can consider users and items bias. For example, some users rate the movies only in range 1-4 out of 10: rating 5 for them is something phenomenal; or users can also rate movies only highly.\n",
     "\n",
     "Let $\\mu$ be the average rating of all items, $r_{ui}$ - rating of item $i$ by user $u$, $I_u$ - items that were rated by user $u$. Then we can calculate user bias $b_u$ as:\n",
@@ -76,11 +71,11 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "r_{ui}=&\\mu+b_u+b_i\n",
+    "r_{ui} = \\mu+b_u+b_i\n",
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "> ##### See implementation of this approach in **elementary.py** file."
+    "> ##### See the implementation of this approach in **elementary.py** file."
    ]
   },
   {
@@ -93,7 +88,62 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Metrics\n",
+    "\n",
+    "How can the similarity of users/items be compared? Let's make an assumption that two users are similar if they rate items in a similar way and two items are similar if they are rated by users in a similar way. In this case we will use similarity metrics based on Euclidean distance and Pearson correlation coefficient which are suitable for this approach.\n",
+    "\n",
+    "#### **Euclidean similarity**\n",
+    "\n",
+    "Euclidean distance between two points $x$ and $y$ in Euclidean n-space can be calculated by the following equation:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "d(x, y) = \\sqrt{\\sum_{k=1}^n (x_k-y_k)^2}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Euclidean distance is inversely propotional to similarity so we should use inverted value of $d(x, y)$. Adding 1 in the denominator to avoid zero division we get the Euclidean similarity:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "sim(p, q) = \\frac{1}{1 + d(p, q)}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "#### **Pearson similarity**\n",
+    "\n",
+    "Let $I_{uv}$ be the items that were rated both by users $u$ and $v$, $U_{ij}$ - users that rated both items $i$ and $j$:\n",
+    "\n",
+    "$\n",
+    "I_{uv} = \\{i \\in I \\space | \\space \\exists r_{ui} \\space \\& \\space \\exists r_{vi}\\}\n",
+    "$\n",
+    "$\n",
+    "U_{ij} = \\{u \\in U \\space | \\space \\exists r_{ui} \\space \\& \\space \\exists r_{uj}\\}\n",
+    "$\n",
+    "\n",
+    "Then the Pearson similarity between two users $u$ and $v$ can be calculated as:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "sim(u, v) = \\frac {\\sum_{i \\in I_{uv}} \\left( r_{ui} - \\mu_u \\right) \\left( r_{vi} - \\mu_v \\right)}\n",
+    "                  {\\sqrt{\\sum_{i \\in I_{uv}} \\left( r_{ui} - \\mu_u \\right)^2}\n",
+    "                   \\sqrt{\\sum_{i \\in I_{uv}} \\left( r_{vi} - \\mu_v \\right)^2}}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "And between two items $i$ and $j$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "sim(i, j) = \\frac {\\sum_{u \\in U_{ij}} \\left( r_{ui} - \\mu_i \\right) \\left( r_{uj} - \\mu_j \\right)}\n",
+    "                  {\\sqrt{\\sum_{u \\in U_{ij}} \\left( r_{ui} - \\mu_i \\right)^2}\n",
+    "                   \\sqrt{\\sum_{u \\in U_{ij}} \\left( r_{uj} - \\mu_j \\right)^2}}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "> ##### See the implementation of this metrics in **metrics.py** file."
+   ]
   },
   {
    "cell_type": "markdown",
