--- a/research.ipynb
+++ b/research.ipynb
@@ -115,12 +115,12 @@
     "\n",
     "Let $I_{uv}$ be the items that were rated both by users $u$ and $v$, $U_{ij}$ - users that rated both items $i$ and $j$:\n",
     "\n",
-    "$\n",
-    "I_{uv} = \\{i \\in I \\space | \\space \\exists r_{ui} \\space \\& \\space \\exists r_{vi}\\} \\newline\n",
-    "$\n",
-    "$\n",
+    "$$\n",
+    "I_{uv} = \\{i \\in I \\space | \\space \\exists r_{ui} \\space \\& \\space \\exists r_{vi}\\}\n",
+    "$$\n",
+    "$$\n",
     "U_{ij} = \\{u \\in U \\space | \\space \\exists r_{ui} \\space \\& \\space \\exists r_{uj}\\}\n",
-    "$\n",
+    "$$\n",
     "\n",
     "Then the Pearson similarity between two users $u$ and $v$ can be calculated as:\n",
     "\n",
