added description of Trivial Recommendation approach

--- a/research.ipynb
+++ b/research.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,13 @@
    "metadata": {},
    "source": [
     "# 1. Models description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $U$ be the set of users, $I$ - set of Items\n"
    ]
   },
   {
@@ -67,7 +74,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "**Final prediction will be:**\n",
+    "**Final prediction** will be:\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
@@ -89,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics\n",
+    "### **Metrics**\n",
     "\n",
     "How can the similarity of users/items be compared? Let's make an assumption that two users are similar if they rate items in a similar way and two items are similar if they are rated by users in a similar way. In this case we will use similarity metrics based on Euclidean distance and Pearson correlation coefficient which are suitable for this approach.\n",
     "\n",
@@ -142,7 +149,32 @@
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "> ##### See the implementation of this metrics in **metrics.py** file."
+    "> ##### See the implementation of these metrics in **metrics.py** file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Trivial Recommendation**\n",
+    "\n",
+    "Now let's consider an approach using similarity.\n",
+    "\n",
+    "Let $i_0$ be the item that was highly rated by user $u_0$. We can find all users that rated this item (some kind of collaboration):\n",
+    "\n",
+    "$$\n",
+    "U(i_0) = \\{ u \\in U \\space | \\space \\exists r_{ui_0} \\}\n",
+    "$$\n",
+    "\n",
+    "Next we can comprise the set of items that were rated by users from $U(i_0)$:\n",
+    "\n",
+    "$$\n",
+    "I(i_0) = \\{ i \\in I \\space | \\space \\exists r_{ui}, \\space u \\in U(i_0) \\}\n",
+    "$$\n",
+    "\n",
+    "**Final prediction** will be top $N$ items from the set of items $I(i_0)$ sorted by similarity $sim(i, i_0)$ to the starting item $i_0$ .\n",
+    "\n",
+    "> ##### See the implementation of this approach in **trivial.py** file."
    ]
   },
   {
@@ -161,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +202,7 @@
        "(100004, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +293,7 @@
        "4       1     1172     4.0  1260759205"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +377,7 @@
        "((99954, 4), (50, 4))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +435,7 @@
        "       [0. , 0. , 0. , ..., 0. , 0. , 0. ]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,12 +463,12 @@
     "er.fit(X)\n",
     "\n",
     "for id in test_data.userId.unique():\n",
-    "    predicted.append(er.make_recommendation(user_id=id, n_recommendations=100))"
+    "    predicted.append(er.make_recommendation(user_id=id, n_recommendations=100000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,16 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.035\n",
-      "0.02\n",
-      "0.0024773869699382953\n"
+      "0.0\n",
+      "0.0\n",
+      "2.2222222222222223e-05\n"
      ]
     }
    ],
