added description of user-based recommendation

--- a/research.ipynb
+++ b/research.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +181,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **User-based Recommendation**\n",
+    "\n",
+    "Let $u_0$ be the user to whom we want to recommend. Let's comprize $U(u_0)$ as a set of top $K$ users that are most similar to $u_0$.\n",
+    "\n",
+    "The value of ratings user $u_0$ supposedly gives to item $i$ is calculated as an aggregation of some similar users rating of the item. In this case we will use:\n",
+    "\n",
+    "$$\n",
+    "r_{u_{0}i}=\\bar{r}_{u_0} + \\frac{\\sum_{u \\in U(u_0)} sim(u, u_0)(r_{ui}-\\bar{r}_u)}{\\sum_{u \\in U(u_0)}|sim(u, u_0)|},\n",
+    "$$\n",
+    "\n",
+    "where $\\bar{r}_{u^\\prime}$ is the average rating of user $u^\\prime$ for all the items rated by $u^\\prime$.\n",
+    "\n",
+    "**Final prediction** will be top $N$ items that have the highest predicted rating."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2. Data preparing"
    ]
   },
@@ -193,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +221,7 @@
        "(100004, 4)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +312,7 @@
        "4       1     1172     4.0  1260759205"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +396,7 @@
        "((99954, 4), (50, 4))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +454,7 @@
        "       [0. , 0. , 0. , ..., 0. , 0. , 0. ]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,12 +482,12 @@
     "er.fit(X)\n",
     "\n",
     "for id in test_data.userId.unique():\n",
-    "    predicted.append(er.make_recommendation(user_id=id, n_recommendations=100000))"
+    "    predicted.append(er.make_recommendation(user_id=id, n_recommendations=100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
