update description of user-based approach

--- a/research.ipynb
+++ b/research.ipynb
@@ -183,7 +183,7 @@
    "source": [
     "### **User-based Recommendation**\n",
     "\n",
-    "Let $u_0$ be the user to whom we want to recommend. Let's comprize $U(u_0)$ as a set of top $K$ users that are most similar to $u_0$.\n",
+    "Let $u_0$ be the user to whom we want to recommend. Let's comprize $U(u_0)$ as a set of top $K$ users that are most similar to $u_0$. We can find $U(u_0)$ as Nearest Neighbors to $u_0$ by one of the similarity metrics defined above.\n",
     "\n",
     "The value of ratings user $u_0$ supposedly gives to item $i$ is calculated as an aggregation of some similar users rating of the item. In this case we will use:\n",
     "\n",
@@ -193,7 +193,9 @@
     "\n",
     "where $\\bar{r}_{u^\\prime}$ is the average rating of user $u^\\prime$ for all the items rated by $u^\\prime$.\n",
     "\n",
-    "**Final prediction** will be top $N$ items that have the highest predicted rating."
+    "**Final prediction** will be top $N$ items that have the highest predicted rating.\n",
+    "\n",
+    "> ##### See the implementation of this approach in **user_based.py** file."
    ]
   },
   {
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -517,6 +519,22 @@
     "print(mapk(actual=actual, predicted=predicted, k=10))\n",
     "print(mapk(actual=actual, predicted=predicted, k=100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from metrics import recsys_euclidean_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
